--- a/18_4.html
+++ b/18_4.html
@@ -50,7 +50,7 @@
 
   function setData(value,data) {
     const comment = getData();
-    localStorage.setItem('comments', JSON.stringify(comments.push(value)));
+    localStorage.setItem('comments', JSON.stringify(comment.push(value)));
   }
 
   const comments = ['fgdysgd','hdsjgdjsghsh'];
